Bug 236107 (Windows only fix) - wrong background for caption in groupbox. r=mconnor

--- a/toolkit/themes/winstripe/global/groupbox.css
+++ b/toolkit/themes/winstripe/global/groupbox.css
@@ -70,7 +70,7 @@ caption {
 }
 
 tabpanels caption {
-  background-color: menu;
+  -moz-appearance: tabpanel;
 }
 
 .caption-text {
